# tkchart

./: .gitignore  CHANGES.md  CHANGES_en.md  CHANGES_zh.md  CONTRIBUTING.md  LICENSE  PKG-INFO  PULL_REQUEST_TEMPLATE.md  README.md  README_CN.md  README_zh.md  SECURITY.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
Examples/: 1. Simple.py  10. change line style.py  1000. Complex.py  11. Complex.py  11. pointing values.py  12. change section style.py  2. width height.py  3. data showing.py  4. change colors.py  5. change fonts.py  6. change sections labels.py  7. y axis precision.py  8. y x space.py  9. data position.py
Tests/: Main - Test.py  test - 1.py  test - 10.py  test - 11.py  test - 12.py  test - 13.py  test - 14.py  test - 15.py  test - 16.py  test - 2.py  test - 3.py  test - 4.py  test - 5.py  test - 6.py  test - 7.py  test - 8.py  test - 9.py
documentation/: DOCUMENTATION_CN.md  DOCUMENTATION_EN.md  DOCUMENTATION_en.md  DOCUMENTATION_zh.md
examples/: 1. Simple.py  10. change line style.py  1000. Complex.py  11. pointing values.py  12. change section style.py  2. width height.py  3. data showing.py  4. change colors.py  5. change fonts.py  6. change sections labels.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
imgs/: TITLE.psd  VERSION.psd  view.prproj
src/ctkchart/: CTkLine.py  CTkLineChart.py  FontStyle.py  ThemeManager.py  Utils.py  Validate.py  __init__.py
src/tkchart/: Exceptions.py  FontStyle.py  Line.py  LineChart.py  RequiredSize.py  RequredGeometry.py  Utils.py  Validate.py  __init__.py
src/tkchart.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
template(s)/: template (1).py  template (2).py  template (5).py  template (8).py
templates/: template (1).py  template (3).py  template (4).py  template (5).py  template (6).py  template (7).py  template (8).py
test/: test1.py  test3.py  test5.py  test7.py
tests/: main test.py  test - last.py  test 2.py  test 3.py  test.py  test1.py  test10-1.py  test10-2.py  test11-1.py  test11-2.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9-1.py  test9-2.py
tkchart/: Line.py  LineChart.py  README.md  RequiredSize.py  RequredGeometry.py  __init__.py
tkchart/tests/: color,width,height_change.py  display_loop.py  test.py  test2.py  too_fast.py
tkchart/tests/tkchart/: __init__.py
