[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkchart"
version = "2.0.0"
authors = [
  { name = "Thisal-D" }
]

license = { file = "LICENSE" }

description = "tkchart Library is a Python library that simplifies the process of creating line charts in tkinter GUI applications."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status ::  5 - Production/Stable",
]
keywords = ["tkchart", "linechart", "tkinter", "customtkinter", "line chart in tkinter", "line chart in customtkinter"]

[project.urls]
homepage = "https://github.com/Thisal-D/tkchart"
repository = "https://github.com/Thisal-D/tkchart"
issues = "https://github.com/Thisal-D/tkchart/issues"