[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkchart"
version = "2.1.5"
authors = [
  { name = "Thisal-D" }
]

license = { file = "LICENSE" }

description = "tkchart is a Python library for creating live updating line charts in Tkinter."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
]

keywords = [
  "tkchart",
  "ctkchart", 
  "linechart",
  "ctk linechart",
  "tk linechart",
  "tkinter",
  "customtkinter", 
  "line chart in tkinter",
  "line chart in customtkinter",
  "customtkinter graphic-interface",
  "tkinter graphic interface",
  "tkinter widgets",
  "customtkinter widgets",
  "python-chart",
  "tk",
  "ctk",
  "customtkinterassets",
  "tkinterassets",
  "ctk-components",
  "tk-components",
  "line-chart-for-python-tkinter",
  "line-chart-for-python-customtkinter"
]

[project.urls]
homepage = "https://github.com/Thisal-D/tkchart"
repository = "https://github.com/Thisal-D/tkchart"
issues = "https://github.com/Thisal-D/tkchart/issues"